methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: Boolean does not take parameters
  if (forward() == true){
             ^MethodsArgs:6: error: Boolean does not take parameters
    forward()
           ^